<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gbaldera.yts.activities.MovieDetailsActivity">

    <item android:id="@+id/action_trailer"
        android:title="@string/action_trailer"
        android:icon="@drawable/ic_movie"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_torrent"
        android:title="@string/action_trailer"
        android:icon="@drawable/ic_download"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="102"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_subtitles"
        android:title="@string/action_subtitles"
        android:orderInCategory="103"
        app:showAsAction="never" />

    <item android:title="@string/action_browser"
        android:orderInCategory="104">
        <menu>
            <item
                android:id="@+id/action_yts"
                android:title="@string/action_yts"/>
            <item
                android:id="@+id/action_imdb"
                android:title="@string/action_imdb"/>
        </menu>
    </item>
</menu>
