<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gbaldera.yts.views.ObservableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollview" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!--header-->
            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/movie_fanart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/backdrop_portrait_height"
                    android:background="@color/windowBackgroundColor" />

                <android.support.v7.widget.CardView
                    android:id="@+id/movie_poster_cardview"
                    android:layout_below="@+id/movie_fanart"
                    app:cardBackgroundColor="@color/windowBackgroundColor"
                    android:transitionName="cover"
                    android:layout_width="@dimen/content_details_portrait_thumb_width"
                    android:layout_height="@dimen/content_details_portrait_thumb_height"
                    android:layout_marginLeft="@dimen/content_details_baseline_margin"
                    android:layout_marginBottom="@dimen/content_details_baseline_margin"
                    android:layout_marginTop="@dimen/content_details_portrait_thumb_negative_margin">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_poster"
                        android:scaleType="centerCrop" />

                </android.support.v7.widget.CardView>

                <!--movie title-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/movie_poster_cardview"
                    android:layout_marginTop="@dimen/content_details_title_margin_top"
                    android:padding="@dimen/content_details_baseline_margin"
                    android:id="@+id/linearLayout">

                    <TextView
                        android:id="@+id/movieTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:maxLines="3"
                        android:ellipsize="end"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/content_details_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textReleaseDate"
                        android:layout_marginTop="@dimen/content_details_small_margin"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/content_details_subheader" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView7"
                        android:layout_marginTop="@dimen/content_details_very_small_margin"
                        android:layout_marginBottom="@dimen/content_details_baseline_margin"
                        android:textStyle="bold|italic"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/content_details_subheader" />
                </LinearLayout>

            </RelativeLayout>

            <!--details-->
            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/details_area"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/content_details_large_margin"
                android:background="#666"
                android:elevation="1dp"
                android:paddingTop="@dimen/content_details_small_margin"
                android:paddingLeft="@dimen/content_details_baseline_margin"
                android:paddingRight="@dimen/content_details_baseline_margin"
                android:paddingBottom="@dimen/content_details_small_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxLines="1"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detailsRunTime"
                        android:id="@+id/TextView03"
                        android:textSize="@dimen/content_details_area_subheader" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView9"
                        android:textSize="@dimen/content_details_area_header"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxLines="1"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detailsCertification"
                        android:id="@+id/TextView01"
                        android:textSize="@dimen/content_details_area_subheader" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView11"
                        android:textSize="@dimen/content_details_area_header"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxLines="1"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detailsRating"
                        android:id="@+id/textView61"
                        android:textSize="@dimen/content_details_area_subheader" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView12"
                        android:textSize="@dimen/content_details_area_header"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.gbaldera.yts.views.ObservableScrollView>

    <!--progress bar-->
    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>