<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/movie_fanart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackgroundColor" />

        <com.gbaldera.yts.views.ObservableScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:id="@+id/scrollview" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding">

                <!--header-->
                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <android.support.v7.widget.CardView
                        android:id="@+id/movie_poster_cardview"
                        app:cardBackgroundColor="@color/windowBackgroundColor"
                        android:layout_width="@dimen/content_details_portrait_thumb_width"
                        android:layout_height="@dimen/content_details_portrait_thumb_height"
                        android:layout_marginLeft="@dimen/content_details_baseline_margin"
                        android:layout_marginBottom="@dimen/content_details_baseline_margin">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/movie_poster"
                            android:scaleType="centerCrop" />

                    </android.support.v7.widget.CardView>

                    <!--movie title-->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/movie_poster_cardview"
                        android:layout_marginTop="@dimen/content_details_title_margin_top"
                        android:padding="@dimen/content_details_baseline_margin"
                        android:id="@+id/linearLayout">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:maxLines="3"
                            android:ellipsize="end"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/content_details_title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/movie_release_date"
                            android:layout_marginTop="@dimen/content_details_small_margin"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/content_details_subheader" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/movie_genre"
                            android:layout_marginTop="@dimen/content_details_very_small_margin"
                            android:layout_marginBottom="@dimen/content_details_baseline_margin"
                            android:textStyle="bold|italic"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/content_details_subheader" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/content_details_baseline_margin" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/movie_tagline"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:text="@string/movies_synopsis"
                        android:textSize="@dimen/content_details_subheader" />

                    <com.gbaldera.yts.views.ExpandingTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/content_details_body_text"
                        android:id="@+id/movie_plot"
                        android:layout_marginTop="4dp"
                        style="@style/Widget.Yts.Movie.Detail.Plot"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/content_details_baseline_margin" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/movie_specs"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:text="@string/movies_specs"
                        android:textSize="@dimen/content_details_subheader" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/details_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:cardBackgroundColor="@color/card_background_dark_details">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/content_details_baseline_margin">

                            <TextView
                                android:id="@+id/movie_runtime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detailsRunTime"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:visibility="visible"
                                tools:text="Runtime" />

                            <View xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_marginTop="@dimen/large_padding"
                                android:layout_marginBottom="8dp"
                                android:gravity="start|center_vertical"
                                android:layout_width="match_parent"
                                android:background="@color/navdrawer_separator"
                                android:layout_height="1dp" />

                            <TextView
                                android:id="@+id/movie_certification"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detailsRunTime"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:visibility="visible"
                                tools:text="Certification" />

                            <View xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_marginTop="@dimen/large_padding"
                                android:layout_marginBottom="8dp"
                                android:gravity="start|center_vertical"
                                android:layout_width="match_parent"
                                android:background="@color/navdrawer_separator"
                                android:layout_height="1dp" />

                            <TextView
                                android:id="@+id/movie_rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detailsRunTime"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:visibility="visible"
                                tools:text="Rating" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>

            </LinearLayout>

        </com.gbaldera.yts.views.ObservableScrollView>

        <!--progress bar-->
        <FrameLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <!--action bar-->
        <include android:id="@+id/toolbar_actionbar" layout="@layout/toolbar_actionbar_transparent"/>

    </FrameLayout>

    <!--AdMob-->
    <include layout="@layout/admob_ad"/>

</LinearLayout>